# Panopticon

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
examples/: dummy_agent_loop.py  test_memory.py
panopticon/: __init__.py  cli.py  conpty.py  memory.py  observer.py  policies.py  sentinel.py
tests/: test_cli.py  test_memory.py  test_observer.py  test_policies.py  test_sentinel.py
